<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_camera"
    android:icon="@drawable/ic_action_camera"
    android:title="@string/action_camera"
    android:showAsAction="always" />
    <item android:id="@+id/action_search"
    android:title="@string/action_search_str"
    android:icon="@drawable/ic_action_search"
    android:showAsAction="always"
    android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_call"
    android:icon="@drawable/ic_action_call"
    android:title="@string/action_call"
    android:showAsAction="always" />
    <item android:id="@+id/action_checkout"
    android:icon="@drawable/ic_launcher"
    android:title="@string/action_checkout"
    android:showAsAction="always"/>
    <item android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/action_settings"/>
    <item android:id="@+id/action_about"
    android:title="@string/action_about"
    android:orderInCategory="101"
    android:showAsAction="never" />
</menu>
